<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Activity.SignInActivity">

    <EditText
            android:id="@+id/editTextUsernameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/username_hint"
            android:padding="10dp"/>

    <EditText
            android:id="@+id/editTextPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUsernameSignup"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"/>

    <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPasswordSignup"
            android:layout_centerHorizontal="true"
            android:text="@string/SignIn"/>

    <TextView
            android:id="@+id/AlreadyAAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NotSignInYet"
            android:textSize="18sp"
            android:layout_below="@id/buttonSignup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"/>

</RelativeLayout>
