<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Activity.LoginActivity"

                                                 tools:ignore="MissingClass">

    <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/username_hint"
            android:padding="10dp"
                tools:ignore="MissingConstraints"/>

    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUsername"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="MissingConstraints"/>

    <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            tools:ignore="MissingConstraints"/>

    <TextView
            android:id="@+id/NotSignInActualy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NotSignInYet"
            android:textSize="18sp"
            android:layout_below="@id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"/>
</RelativeLayout>